# AutoKB

./: .gitignore  README.md  README.zh-CN.md  build.py  index.html  package.json  pnpm-lock.yaml
.kiro/specs/delete-confirmation-dialog/: design.md  requirements.md  tasks.md
.kiro/specs/remove-tailwind-css/: browser-console-test.js  dark-mode-test-checklist.md  design.md  manual-testing-guide.md  requirements.md  task-13.1-summary.md  tasks.md
.kiro/specs/theme-color-fix/: design.md  requirements.md  tasks.md
public/: overlay.html
src/: App.vue  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey.rs  input_manager.rs  lib.rs  macro_trigger.rs  main.rs  player.rs  recorder.rs  script.rs
src/components/: ConfirmDialog.vue  ControlBar.vue  EventList.vue  MacroEditor.vue  MacroPanel.vue  ParamEditor.vue  ScriptLibrary.vue  SettingsView.vue  TaskDashboard.vue  ToastNotification.vue  VisualScriptEditor.vue
src/composables/: useConfirmDialog.ts
src/stores/: scriptStore.ts
src/types/: script.ts
src/utils/: eventGrouping.ts
tests/: dark-mode.test.ts
